--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
+src/Images_algorithms_*.jl
+/*.tar.gz
+/tmp
+/dist
+/dist-extras
+/julia
+/usr
+/usr-staging
+/Make.user
+/julia-*
+/source-dist.tmp
+/source-dist.tmp1
+
+*.exe
+*.dll
+*.dwo
+*.do
+*.o
+*.obj
+*.so
+*.dylib
+*.dSYM
 *.jl.cov
 *.jl.*.cov
 *.jl.mem
+*.ji
+deps/deps.jl
+
+.DS_Store
